--- a/Nightshift Extension/Info.plist
+++ b/Nightshift Extension/Info.plist
@@ -24,6 +24,17 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSExtension</key>
 	<dict>
+		<key>SFSafariStyleSheet</key>
+		<array>
+			<dict>
+				<key>Style Sheet</key>
+				<string>github-dark.css</string>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://*.github.com/*</string>
+				</array>
+			</dict>
+		</array>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.Safari.extension</string>
 		<key>NSExtensionPrincipalClass</key>
@@ -53,7 +64,7 @@
 				<string>*.webkit.org</string>
 			</array>
 			<key>Level</key>
-			<string>Some</string>
+			<string>All</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
