--- a/Nightshift Extension/Info.plist
+++ b/Nightshift Extension/Info.plist
@@ -28,6 +28,14 @@
 		<array>
 			<dict>
 				<key>Style Sheet</key>
+				<string>stackoverflow-dark.css</string>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>https://*.stackoverflow.com/*</string>
+				</array>
+			</dict>
+			<dict>
+				<key>Style Sheet</key>
 				<string>google-dark.css</string>
 				<key>Allowed URL Patterns</key>
 				<array>
