--- a/Nightshift Extension/Info.plist
+++ b/Nightshift Extension/Info.plist
@@ -27,6 +27,21 @@
 		<key>SFSafariStyleSheet</key>
 		<array>
 			<dict>
+				<key>Excluded URL Patterns</key>
+				<array>
+					<string>https://*.google.com/*</string>
+					<string>https://*.github.com/*</string>
+					<string>https://*.stackoverflow.com/*</string>
+					<string>https://*.reddit.com/*</string>
+				</array>
+				<key>Style Sheet</key>
+				<string>dark.css</string>
+				<key>Allowed URL Patterns</key>
+				<array>
+					<string>*</string>
+				</array>
+			</dict>
+			<dict>
 				<key>Style Sheet</key>
 				<string>stackoverflow-dark.css</string>
 				<key>Allowed URL Patterns</key>
